apps/article-05/cfg-demo/deployments.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: food-web
  namespace: cfg-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: food-web
  template:
    metadata:
      labels:
        app: food-web
    spec:
      containers:
      - name: web
        image: nginxdemos/hello:plain-text
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-web
  namespace: cfg-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin-web
  template:
    metadata:
      labels:
        app: admin-web
    spec:
      containers:
      - name: web
        image: nginxdemos/hello:plain-text
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
