apps/article-05/cfg-demo/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: food-web
  namespace: cfg-demo
  annotations:
    cloud.google.com/neg: '{"exposed_ports":{"80":{}}}'
spec:
  selector:
    app: food-web
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: admin-web
  namespace: cfg-demo
  annotations:
    cloud.google.com/neg: '{"exposed_ports":{"80":{}}}'
spec:
  selector:
    app: admin-web
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
