apps/article-05/cfg-demo/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cfg-lab-gw
  namespace: cfg-demo
  annotations:
    networking.gke.io/certmap: cfg-lab-cert-map
spec:
  gatewayClassName: gke-l7-global-external-managed
  listeners:
  - name: https
    protocol: HTTPS
    port: 443
    tls:
      mode: Terminate
      options:
        networking.gke.io/pre-shared-certs: ""
  - name: http
    protocol: HTTP
    port: 80
